2020-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3135.c,
	  src/z80/ralloc2.cc:
	  Attempt to fix bug #3135.

2020-10-21 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	* src/z80/mappings.i:
	  Fix bug #3137.

2020-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.lex:
	  Improve diagnostics for binary integer literals.

2020-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s,
	  .version:
	  Use a default crt0 that works well on typical Rabbit hardware.

2020-10-13 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCpeeph.c:
	  Peephole rule immdInRange now accepts mul, div, and mod operations.
	  immdInRange silently fail in case of non-number (label) arguments.
	* src/z80/peeph.def:
	  Add new peephole rules.

2020-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3129.c:
	  Disable test for ds390.
	* support/regression/tests/bug-3132.c:
	  Remove conflicting (for ds390) __sdcc_external_startup definition.

2020-10-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3132.c:
	  Fix bug #3132.c.
	* src/z80/gen.c:
	  Fix overoptimistic stack coalescing assumption in cost function, RFE #710.

2020-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3127.c,
	  support/regression/tests/bug-3129.c:
	  Fix bugs #3127, #3128, #3129, #3130, #3131.

2020-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve wide subtraction.

2020-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve Rabbit negation.

2020-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve register shuffling.

2020-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve left shift.
